kloudpepper-SG.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: "CloudFormation template to create Security Groups"

Parameters:
  EnvironmentType:
    Type: String

  EnvironmentName:
    Type: String

  VpcID:
    Type: String

  VpcCIDR:
    Type: String


Conditions:
  isProdEnvironmentType: !Equals [!Ref EnvironmentType, prod]
  isNonProdEnvironmentType: !Equals [!Ref EnvironmentType, nonprod]


Resources:
  InternalALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Condition: isNonProdEnvironmentType
    Properties:
      GroupDescription: ALB security group
      GroupName: !Sub ${EnvironmentName}-ALB-SG
      SecurityGroupIngress:
      - CidrIp: 10.0.0.0/16 # On-premises Network. Enter the CIDR or the IPs you want to connect to the balancer
        FromPort: 8445
        IpProtocol: tcp
        ToPort: 8445
        Description: on-premises network
      VpcId: !Ref VpcID
      Tags:
        -
          Key: Name
          Value: !Sub ${EnvironmentName}-ALB-SG

  ExternalALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Condition: isProdEnvironmentType
    Properties:
      GroupDescription: ALB security group
      GroupName: !Sub ${EnvironmentName}-ALB-SG
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 443
        IpProtocol: tcp
        ToPort: 443
        Description: public ALB
      VpcId: !Ref VpcID
      Tags:
        -
          Key: Name
          Value: !Sub ${EnvironmentName}-ALB-SG

  ECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: ALBSecurityGroup
    Properties:
      GroupDescription: ECS security group
      GroupName: !Sub ${EnvironmentName}-ECS-SG
      SecurityGroupIngress:
      - SourceSecurityGroupId: !GetAtt ALBSecurityGroup.GroupId
        FromPort: 8554
        IpProtocol: tcp
        ToPort: 8554
      VpcId: !Ref VpcID
      Tags:
        -
          Key: Name
          Value: !Sub ${EnvironmentName}-ECS-SG

  MQSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: ECSSecurityGroup
    Properties:
      GroupDescription: MQ security group
      GroupName: !Sub ${EnvironmentName}-MQ-SG
      SecurityGroupIngress:
      - SourceSecurityGroupId: !GetAtt ECSSecurityGroup.GroupId
        FromPort: 61617
        IpProtocol: tcp
        ToPort: 61617
      VpcId: !Ref VpcID
      Tags:
        -
          Key: Name
          Value: !Sub ${EnvironmentName}-MQ-SG

  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: ECSSecurityGroup
    Properties:
      GroupDescription: RDS security group
      GroupName: !Sub ${EnvironmentName}-DB-SG
      SecurityGroupIngress:
      - SourceSecurityGroupId: !GetAtt ECSSecurityGroup.GroupId
        FromPort: 33066
        IpProtocol: tcp
        ToPort: 33066
      VpcId: !Ref VpcID
      Tags:
        -
          Key: Name
          Value: !Sub ${EnvironmentName}-DB-SG

  EFSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: ECSSecurityGroup
    Properties:
      GroupDescription: EFS security group
      GroupName: !Sub ${EnvironmentName}-EFS-SG
      SecurityGroupIngress:
      - SourceSecurityGroupId: !GetAtt ECSSecurityGroup.GroupId
        FromPort: 2049
        IpProtocol: tcp
        ToPort: 2049
      VpcId: !Ref VpcID
      Tags:
        -
          Key: Name
          Value: !Sub ${EnvironmentName}-EFS-SG

  VPCEnpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: VPC Endpoints security group
      GroupName: !Sub ${EnvironmentName}-VPCEndpoint-SG
      SecurityGroupIngress:
      - CidrIp: !Ref VpcCIDR
        FromPort: 443
        IpProtocol: tcp
        ToPort: 443
      VpcId: !Ref VpcID
      Tags:
        -
          Key: Name
          Value: !Sub ${EnvironmentName}-VPCEndpoint-SG

  Route53SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Route53 Resolver security group
      GroupName: !Sub ${EnvironmentName}-R53Resolver-SG
      SecurityGroupIngress:
      - CidrIp: 10.0.0.0/16 # On-premises Network. Enter the CIDR or the IPs you want to connect to the balancer
        FromPort: 53
        IpProtocol: udp
        ToPort: 53
        Description: on-premises network
      VpcId: !Ref VpcID
      Tags:
        -
          Key: Name
          Value: !Sub ${EnvironmentName}-R53Resolver-SG

Outputs:
  InternalALBSecurityGroup:
    Condition: isNonProdEnvironmentType
    Description: ALB security group
    Value: !GetAtt InternalALBSecurityGroup.GroupId

  ExternalALBSecurityGroup:
    Condition: isProdEnvironmentType
    Description: ALB security group
    Value: !GetAtt ExternalALBSecurityGroup.GroupId

  ECSSecurityGroup:
    Description: ECS security group
    Value: !GetAtt ECSSecurityGroup.GroupId

  MQSecurityGroup:
    Description: MQ security group
    Value: !GetAtt MQSecurityGroup.GroupId

  DBSecurityGroup:
    Description: RDS security group
    Value: !GetAtt DBSecurityGroup.GroupId

  EFSSecurityGroup:
    Description: EFS security group
    Value: !GetAtt EFSSecurityGroup.GroupId

  VPCEnpointSecurityGroup:
    Description: VPC Endpoints security group
    Value: !GetAtt VPCEnpointSecurityGroup.GroupId

  Route53SecurityGroup:
    Description: Route53 Resolver security group
    Value: !GetAtt Route53SecurityGroup.GroupId
